fixed config null-hostility crash